--- a/app/views/media_entries/show_by_confidential_link.html.haml
+++ b/app/views/media_entries/show_by_confidential_link.html.haml
@@ -1,4 +1,6 @@
+:ruby
+  render('media_entries/_show/head_meta_tags')
+
 - content_for(:title_head) { @get.title }
 
 = react('Views.BaseTmpReact', { get: @get, action_name: action_name })
-
