--- a/app/views/media_entries/_show/_head_meta_tags.haml
+++ b/app/views/media_entries/_show/_head_meta_tags.haml
@@ -1,9 +1,11 @@
 :ruby
-  # head metadata only for public resources:
-  return unless @get.privacy_status == :public
+  # meta tags only for public entries
+  if @get.privacy_status == :public
+    render('media_entries/_show/opengraph_meta')
+    render('media_entries/_show/twitter_card_meta')
+  end
 
+  # always allow oEmbed discovery
   render('media_entries/_show/oembed_discovery_links')
-  render('media_entries/_show/opengraph_meta')
-  render('media_entries/_show/twitter_card_meta')
 
   # TODO: https://medium.com/slack-developer-blog/everything-you-ever-wanted-to-know-about-unfurling-but-were-afraid-to-ask-or-how-to-make-your-e64b4bb9254#.drww76l1r
