--- a/app/assets/stylesheets/general/_forms.sass
+++ b/app/assets/stylesheets/general/_forms.sass
@@ -5,7 +5,8 @@
 input[type="text"],
 input[type="email"],
 input[type="password"],
-textarea
+textarea,
+.wrapped-textarea
   +border-radius($border-radius-m)
   +box-shadow(inset 0 1px 3px $darken-less)
   border: 1px solid $mono-light
