workflows: improve ui, extend common metadata

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -302,3 +302,21 @@ details.ui-subsection
   &[open]
     summary
       cursor: n-resize
+
+.font-italic
+  font-style: italic
+.font-bold
+  font-weight: bold
+
+.text-center
+  text-align: center
+
+  
+.bg-error
+  background-color: lighten($red, 50%)
+.text-error
+  color: $red
+
+  
+.text-truncate
+  +truncate
