--- a/app/views/media_entries/new.html.haml
+++ b/app/views/media_entries/new.html.haml
@@ -16,7 +16,9 @@
 
       - if @get.workflow
         .notice{style: 'padding: 20px; border: 1px solid #ffeeba; background-color: #fff3cd; color: #856404; border-radius: 3px; margin-top: 20px'}
-          Following Media Entries will be added to the main collection of workflow &rarr; #{link_to @get.workflow.name, @get.workflow.actions.dig(:edit, :url), class: 'strong'}
+          = t(:workflow_uploader_notice_pre)
+          &rarr; #{link_to @get.workflow.name, @get.workflow.actions.dig(:edit, :url), class: 'strong'}
+          = t(:workflow_uploader_notice_post)
 
       .js-only
         = react('Views.My.Uploader', get: @get)
