--- a/app/views/styleguide/_element.haml
+++ b/app/views/styleguide/_element.haml
@@ -22,7 +22,7 @@
 
 %section.sg-example{:id => section}
   %h3
-    %a{:href => styleguide_section_path(@section[:name]) + '#' + section}= section
+    %a{:href => !@section ? nil :  styleguide_section_path(@section[:name]) + '#' + section}= section
 
   -# %button.sg-button{data:{hook:'sg-view-code'}}
   -#   HTML
