feat: copyright notice templates

--- a/app/assets/stylesheets/components/_ui-autocomplete.sass
+++ b/app/assets/stylesheets/components/_ui-autocomplete.sass
@@ -94,7 +94,6 @@
   text-overflow: ellipsis !important
   white-space: nowrap !important
 
-
 .ui-autocomplete-override-sidebar:hover
   background-color: #0081C2 !important
   background-image: linear-gradient(to bottom, #0088cc, #0077b3) !important
@@ -102,3 +101,6 @@
   color: #FFFFFF !important
   outline: 0 none !important
   text-decoration: none !important
+
+.ui-typeahead-input
+  background-color: #fff !important
