--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -311,16 +311,30 @@ details.ui-subsection
 .text-center
   text-align: center
 
-  
+
 .bg-error
   background-color: lighten($red, 50%)
 .text-error
   color: $red
 
-  
+
 .text-truncate
   +truncate
-  
 
-body[data-a="preview"][data-r="workflows"] 
+// from <https://github.com/twbs/bootstrap/blob/5f2480a90ab911babc53039835fe78c6fc12646d/scss/utilities/_stretched-link.scss>
+.stretched-link
+  &::after
+    position: absolute
+    top: 0
+    right: 0
+    bottom: 0
+    left: 0
+    z-index: 1
+    // Just in case `pointer-events: none` is set on a parent
+    pointer-events: auto
+    content: ""
+    // IE10 bugfix, see https://stackoverflow.com/questions/16947967/ie10-hover-pseudo-class-doesnt-work-without-background-color
+    background-color: rgba(0, 0, 0, 0)
+
+body[data-a="preview"][data-r="workflows"]
   min-width: 1240px
