--- a/app/assets/stylesheets/combos/_ui-header.sass
+++ b/app/assets/stylesheets/combos/_ui-header.sass
@@ -3,10 +3,14 @@
  *
  * Styleguide 7.3
 
+$logo-width: 75px
+$logo-height: 32px
+
 .ui-header
-  +min-dimension(auto, 30px)
+  +min-dimension(auto, 32px)
   +box-shadow(inset 0 -1px 3px $darken)
-  padding: $space-s
+  padding: 11px
+  padding-left: 0
   position: relative
   border-top: 1px solid rgba(0, 0, 0, 0.01)
 
@@ -32,7 +36,7 @@
  *  User area
  *-----------------------------------------
 .ui-header-user
-  +position-top-right($space-s, $space-s)
+  +position-top-right($space-s, $space-s) /// top 4px
   .dropdown, .button
     top: $space-x
 
@@ -40,18 +44,42 @@
  *  Brand area
  *-----------------------------------------
 .ui-header-brand
-  max-width: 30%
+  width: 35%
+  line-height: 1.2
+  position: relative
+  display: table
+  height: $logo-height
 
 .ui-header-brand a:hover
   text-decoration: none
 
 .ui-header-logo
-  +float-left
-  margin-right: $space-m
+  display: inline-block
+  position: absolute
+  width: ($logo-width)
+  height: 100%
+  background-repeat: no-repeat
+  background-position: center center
+  background-size: auto $logo-height
 
-.ui-header-brand-name
+.ui-header-logo-mini
   display: none
 
+.ui-header-brand-text
+  position: relative
+  left: $logo-width
+  padding: 2px 0
+  display: table-cell
+  vertical-align: middle
+
+  a
+    color: $mono-bright
+
+.ui-header-brand-name,
 .ui-header-instance-name
-  line-height: $line-height-xl
-  padding-top: 3px
+  display: inline
+
+.ui-header-brand-name:before
+  content: ' | '
+
+
