--- a/app/assets/stylesheets/layout/_layout-responsive.sass
+++ b/app/assets/stylesheets/layout/_layout-responsive.sass
@@ -4,14 +4,15 @@
  *
 
 @media #{$screen-size-xs}
+  .ui-header-brand
+    max-width: 340px
+  .ui-header-brand-text
+    padding: 0
   .ui-header-brand-name,
   .ui-header-instance-name
     display: block
-    line-height: 1
-  .ui-header-instance-name
-    $font-size: $font-xs
-  .ui-header-logo
-    display: none
+  .ui-header-brand-name:before
+    content: none
 
 @media #{$screen-size-xs-s}
   /* Responsive Footer
@@ -46,3 +47,4 @@
     display: block
     float: none
     margin-bottom: $space-s
+
