--- a/app/views/application/_app_header.haml
+++ b/app/views/application/_app_header.haml
@@ -5,7 +5,7 @@
     brand: {
       instance_name: localize(settings.site_titles),
       name: localize(settings.brand_texts),
-      logo: settings.brand_logo_url.try(:empty?) ? nil : {
+      logo: !settings.brand_logo_url.present? ? nil : {
         src: settings.brand_logo_url,
         # a11y: logo is just the visual representation of the
         # (already present) 'name', so it can be ignored:
