--- a/app/assets/stylesheets/video-js-theme.scss
+++ b/app/assets/stylesheets/video-js-theme.scss
@@ -7,8 +7,8 @@
 
 @import '../../../node_modules/video.js/dist/video-js';
 //= depend_on_asset '../../../node_modules/video.js/dist/video-js'
-@import '../../../node_modules/videojs-resolution-switcher/lib/videojs-resolution-switcher';
-//= depend_on_asset '../../../node_modules/videojs-resolution-switcher/lib/videojs-resolution-switcher'
+@import '../javascripts/lib/videojs-resolution-switcher/lib/videojs-resolution-switcher';
+//= depend_on_asset '../javascripts/lib/videojs-resolution-switcher/lib/videojs-resolution-switcher'
 
 // default fullscreen sizing:
 // see <https://docs.brightcove.com/en/perform/brightcove-player/guides/sizing-the-player.html#fullscreen>
