feat: add delegations

--- a/app/views/my/groups/index.html.haml
+++ b/app/views/my/groups/index.html.haml
@@ -25,6 +25,10 @@
           title: t(:internal_groups),
           list: @get.section_content.internal
         },
+        my_delegations: {
+          title: t(:responsibility_groups),
+          list: @get.section_content.delegations
+        },
         my_authentication_groups: {
           title: t(:authentication_groups),
           list: @get.section_content.authentication
