--- a/app/views/my/workflows/new.haml
+++ b/app/views/my/workflows/new.haml
@@ -14,4 +14,4 @@
           = f.text_field :name, class: 'form-item', style: 'width: 100%'
 
       .form-footer{ style: 'padding: 0px 10px' }
-        = f.submit t(:group_edit_form_save_btn, raise: false), class: 'primary-button'
+        = f.submit t(:workflows_index_action_save), class: 'primary-button'
