fix: resurrect "description" icon

--- a/app/assets/fonts/madek-icon-font/_style.css.erb
+++ b/app/assets/fonts/madek-icon-font/_style.css.erb
@@ -202,7 +202,7 @@
 .icon-add-user:before {
   content: "\e630";
 }
-.icon-question2:before {
+.icon-question:before {
   content: "\e62f";
 }
 .icon-copy:before {
