show common empty message for autocomplete

--- a/app/assets/stylesheets/components/_ui-autocomplete.sass
+++ b/app/assets/stylesheets/components/_ui-autocomplete.sass
@@ -60,8 +60,6 @@
 
 // overwrite typeahead inline styles :/
 .ui-autocomplete-holder
-  position: initial !important
-  display: initial !important
   width: 100%
 
 // custom: we set some results/suggestions as disabled (existing values)
@@ -104,3 +102,7 @@
 
 .ui-typeahead-input
   background-color: #fff !important
+
+.ui-autocomplete-empty
+  color: $mono-dark
+  text-align: center
