--- a/app/assets/stylesheets/markdown.sass
+++ b/app/assets/stylesheets/markdown.sass
@@ -9,9 +9,9 @@
   h1, h2, h3
     font-weight: bolder
 
-  h1, h2
-    padding-bottom: .25em
-    border-bottom: 1px solid $mono-light
+  // h1, h2
+  //   padding-bottom: .25em
+  //   border-bottom: 1px solid $mono-light
 
   h1
     font-size: 1.5em
