--- a/app/views/about_pages/show.haml
+++ b/app/views/about_pages/show.haml
@@ -1,6 +1,7 @@
+- content_for(:title_head) { @get.title }
+
 .app-body-ui-container
   .ui-container.tab-content.bordered.rounded-top.rounded-bottom.mbh
     .ui-container.bright.pal.rounded-top.rounded-bottom
-
       .ui-markdown.pbl
         = @get.raw_html
