style: markdown: first-level heading

--- a/app/assets/stylesheets/markdown.sass
+++ b/app/assets/stylesheets/markdown.sass
@@ -9,12 +9,10 @@
   h1, h2, h3
     font-weight: bolder
 
-  // h1, h2
-  //   padding-bottom: .25em
-  //   border-bottom: 1px solid $mono-light
-
   h1
-    font-size: 1.5em
+    font-size: 2.5em
+    padding-bottom: .25em
+    border-bottom: 1px solid $mono-light
 
   h2
     font-size: 1.34em
