--- a/app/assets/stylesheets/embedded-view.scss
+++ b/app/assets/stylesheets/embedded-view.scss
@@ -35,96 +35,220 @@ body {
   overflow: hidden;
 }
 
-// our videojs extensions:
-$titlebar-height: 15vmin;
-$titlebar-logo-width: 30vmin;
-$titlebar-logo-padding: 4vmin;
-$titlebar-title-padding: 3vmin;
-$titlebar-font-size: 5vmin;
-$titlebar-logo-sizes: 20vmin 10vmin;
-$modal-dialog-padding: 20vmin !important;
+// EMBEDDED VIEW ONLY:
+body[data-embedded-view] {
+  // our videojs extensions:
+  $titlebar-height: 15vmin;
+  $titlebar-logo-width: 30vmin;
+  $titlebar-logo-padding: 4vmin;
+  $titlebar-title-padding: 3vmin;
+  $titlebar-font-size: 5vmin;
+  $titlebar-logo-sizes: 20vmin 10vmin;
+  $modal-dialog-padding: 20vmin !important;
 
-.vjs-titlebar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.67);
-
-  color: $white;
-  text-decoration: none;
-
-  font-size: $titlebar-font-size;
-  height: $titlebar-height;
-
-  opacity: 1;
-  transition: opacity ease-in-out 0.3s;
-  &.vjs-hidden {
-    display: block !important;
-    opacity: 0;
-  }
-
-  .vjs-titlebar-logo,
-  .vjs-titlebar-caption {
+  .vjs-titlebar {
     position: absolute;
     top: 0;
-  }
-
-  .vjs-titlebar-logo {
-    right: 0;
-    height: $titlebar-height;
-    width: $titlebar-logo-width;
-    background-size: $titlebar-logo-sizes;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-image: url(madek-logo-svg(white));
-  }
-
-  .vjs-titlebar-caption {
     left: 0;
     width: 100%;
-    padding: $titlebar-title-padding;
-    padding-right: $titlebar-title-padding + $titlebar-logo-width;
+    background: rgba(0, 0, 0, 0.67);
+
+    color: $white;
+    text-decoration: none;
+
+    font-size: $titlebar-font-size;
+    height: $titlebar-height;
+
+    opacity: 1;
+    transition: opacity ease-in-out 0.3s;
+    &.vjs-hidden {
+      display: block !important;
+      opacity: 0;
+    }
+
+    .vjs-titlebar-logo,
+    .vjs-titlebar-caption {
+      position: absolute;
+      top: 0;
+    }
+
+    .vjs-titlebar-logo {
+      right: 0;
+      height: $titlebar-height;
+      width: $titlebar-logo-width;
+      background-size: $titlebar-logo-sizes;
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-image: url(madek-logo-svg(white));
+    }
+
+    .vjs-titlebar-caption {
+      left: 0;
+      width: 100%;
+      padding: $titlebar-title-padding;
+      padding-right: $titlebar-title-padding + $titlebar-logo-width;
+    }
+
+    .vjs-titlebar-title,
+    .vjs-titlebar-subtitle {
+      display: block;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .vjs-titlebar-title {
+      font-weight: 600;
+      padding-bottom: 1em;
+    }
+    .vjs-titlebar-subtitle {
+      font-size: 0.5em;
+      line-height: 2em;
+      margin-top: -1.7em;
+    }
   }
 
-  .vjs-titlebar-title,
-  .vjs-titlebar-subtitle {
-    display: block;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  .vjs-modal-dialog {
+    z-index: 1;
+  }
+  .vjs-modal-dialog-content {
+    padding: $modal-dialog-padding !important;
   }
 
-  .vjs-titlebar-title {
-    font-weight: 600;
-    padding-bottom: 1em;
+  // error messages
+  .error-msg-container {
+    background-image: image-url('animated-static-noise.gif');
+    background-size: 100% 100%; // fallback
+    background-size: cover;
+    & > div {
+      padding: 0 !important;
+    }
   }
-  .vjs-titlebar-subtitle {
-    font-size: 0.5em;
-    line-height: 2em;
-    margin-top: -1.7em;
+  .error-msg {
+    padding: 5%;
+    text-align: center;
+    font-family: $default-font-family !important;
+    background: transparent !important;
   }
 }
 
-.vjs-modal-dialog {
-  z-index: 1;
-}
-.vjs-modal-dialog-content {
-  padding: $modal-dialog-padding !important;
-}
+// FULLSCREEN VIEW ONLY:
 
-// error messages
-.error-msg-container {
-  background-image: image-url('animated-static-noise.gif');
-  background-size: 100% 100%; // fallback
-  background-size: cover;
-  & > div {
-    padding: 0 !important;
+body[data-fullscreen-view] {
+  .video-js.vjs-fluid,
+  .video-js.vjs-16-9,
+  .video-js.vjs-4-3 {
+    height: 100%;
+    position: absolute;
   }
-}
-.error-msg {
-  padding: 5%;
-  text-align: center;
-  font-family: $default-font-family !important;
-  background: transparent !important;
+
+  .vjs-default-skin .vjs-big-play-button {
+    font-size: 5rem;
+
+    //  circular button
+    $big-play-width: 8rem;
+    $big-play-height: $big-play-width;
+    border-radius: $big-play-width;
+
+    line-height: $big-play-height;
+    height: $big-play-height;
+    width: $big-play-width;
+
+    margin-left: -($big-play-width / 2);
+    margin-top: -($big-play-width / 2);
+  }
+
+  $scale-factor: 0.3; // use same relative values as above with vmin's
+  $titlebar-height: $scale-factor * 15rem;
+  $titlebar-logo-width: $scale-factor * 30rem;
+  $titlebar-logo-padding: $scale-factor * 4rem;
+  $titlebar-title-padding: $scale-factor * 3rem;
+  $titlebar-font-size: $scale-factor * 5rem;
+  $titlebar-logo-sizes: ($scale-factor * 20rem) ($scale-factor * 10rem);
+  $modal-dialog-padding: $scale-factor * 20rem !important;
+
+  .vjs-titlebar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.67);
+
+    color: $white;
+    text-decoration: none;
+
+    font-size: $titlebar-font-size;
+    height: $titlebar-height;
+
+    opacity: 1;
+    transition: opacity ease-in-out 0.3s;
+    &.vjs-hidden {
+      display: block !important;
+      opacity: 0;
+    }
+
+    .vjs-titlebar-logo,
+    .vjs-titlebar-caption {
+      position: absolute;
+      top: 0;
+    }
+
+    .vjs-titlebar-logo {
+      right: 0;
+      height: $titlebar-height;
+      width: $titlebar-logo-width;
+      background-size: $titlebar-logo-sizes;
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-image: url(madek-logo-svg(white));
+    }
+
+    .vjs-titlebar-caption {
+      left: 0;
+      width: 100%;
+      padding: $titlebar-title-padding;
+      padding-right: $titlebar-title-padding + $titlebar-logo-width;
+    }
+
+    .vjs-titlebar-title,
+    .vjs-titlebar-subtitle {
+      display: block;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .vjs-titlebar-title {
+      font-weight: 600;
+      padding-bottom: 1em;
+    }
+    .vjs-titlebar-subtitle {
+      font-size: 0.5em;
+      line-height: 2em;
+      margin-top: -1.7em;
+    }
+  }
+
+  .vjs-modal-dialog {
+    z-index: 1;
+  }
+  .vjs-modal-dialog-content {
+    padding: $modal-dialog-padding !important;
+  }
+
+  // error messages
+  .error-msg-container {
+    background-image: image-url('animated-static-noise.gif');
+    background-size: 100% 100%; // fallback
+    background-size: cover;
+    & > div {
+      padding: 0 !important;
+    }
+  }
+  .error-msg {
+    padding: 5%;
+    text-align: center;
+    font-family: $default-font-family !important;
+    background: transparent !important;
+  }
 }
