feat: redirect after login to the previous page

--- a/app/views/application/_login_menu.haml
+++ b/app/views/application/_login_menu.haml
@@ -1,5 +1,5 @@
 :ruby
-  login_link = '/#login_form'
+  login_link = root_path(anchor: 'login_form', return_to: request.original_fullpath)
 
 = component('button.tertiary', href: login_link) do
   = component('icon.user')
