feat: add an optional link to documentation in tooltips

--- a/app/assets/stylesheets/overrides/_bootstrap.tooltip.sass
+++ b/app/assets/stylesheets/overrides/_bootstrap.tooltip.sass
@@ -69,3 +69,7 @@
   margin-left: -5px
   border-width: 0 5px 5px
   border-bottom-color: #000000
+
+.tooltip .link
+  color: #ffffff
+  text-decoration: underline
