--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -171,7 +171,7 @@
 
 @import tachyons
 
-/* App custumizations
+/* App customizations
  *-----------------------------------------
 
 #app-alerts.ui-alerts
