Remove FilterSet and relations thereof

--- a/app/views/styleguide/12_React/_01_resource-thumbnail.html.haml
+++ b/app/views/styleguide/12_React/_01_resource-thumbnail.html.haml
@@ -9,9 +9,7 @@
     { get: Presenters::MediaEntries::MediaEntryIndex.new(
         MediaEntry.first, current_user) },
     { get: Presenters::Collections::CollectionIndex.new(
-        Collection.first, current_user) },
-    { get: Presenters::FilterSets::FilterSetIndex.new(
-        FilterSet.first, current_user) } ]
+        Collection.first, current_user) } ]
   }
 
 = render_partial('element', element) do
