--- a/app/views/application/_app_header.haml
+++ b/app/views/application/_app_header.haml
@@ -35,8 +35,7 @@
           href: search_path,
           active: (link_active?(search_path) or
             link_active?(media_entries_path, deep: true) or
-            link_active?(collections_path, deep: true) or
-            link_active?(filter_sets_path, deep: true))
+            link_active?(collections_path, deep: true))
         },
 
         help: !localize(settings.support_urls).present? ? nil : {
