--- a/app/views/media_entries/embedded_image.html.haml
+++ b/app/views/media_entries/embedded_image.html.haml
@@ -1,6 +1,6 @@
 -# NOTE: only for images (old design with tile)
 
 - content_for(:body) do
-  = react('Views.MediaEntry.MediaEntryEmbeddedTiled', get: @get)
+  = react('Views.MediaEntry.MediaEntryEmbeddedImage', get: @get)
 
 = render template: 'layouts/_base'
