--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -82,6 +82,7 @@
 @import components/ui-thumb-micro
 @import components/ui-tiles
 @import components/ui-tooltip
+@import components/section-labels
 
 // To be revamped
 @import components/multi-select
