--- a/app/assets/stylesheets/components/_ui-tag-cloud.sass
+++ b/app/assets/stylesheets/components/_ui-tag-cloud.sass
@@ -128,3 +128,16 @@
 .ui-tag-cloud.compact
   .ui-tag-button .ui-tag-counter
     display: none
+
+.ui-tag-cloud-person-roles-item
+  margin-bottom: 2px
+  & > .ui-tag-button
+    float: left
+    margin-right: 2px
+
+.ui-role-tags
+  padding-left: 10px
+  .ui-tag-button
+    background-image: linear-gradient(#efefef, #e3e3e3)
+    background-color: #efefef
+    margin: 0 2px 5px 2px
