--- a/app/assets/stylesheets/combos/_ui-home-claim.sass
+++ b/app/assets/stylesheets/combos/_ui-home-claim.sass
@@ -19,6 +19,7 @@
 
 .pitch-login
   position: relative
+  text-align: left
 
   .ui-tabs
     @extend .ui-container
@@ -33,8 +34,7 @@
     +border-bottom-radius($border-radius-m)
     border: 1px solid $mono-light
     background: $white
-    min-height: 220px
-    padding: $space-s $space-m 0
+    padding: $space-s $space-m $space-l
 
   &.round
     +border-radius($border-radius-m)
