--- a/app/views/application/root.html.erb
+++ b/app/views/application/root.html.erb
@@ -3,6 +3,8 @@
 react(
   'Views.explore.ExploreLoginPage',
   get: @get,
-  loginProviders: @app_layout_data.login_providers)
+  returnTo: request.original_fullpath,
+  lang: I18n.locale
+)
 
 %>
