--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -83,6 +83,7 @@
 @import components/ui-tiles
 @import components/ui-tooltip
 @import components/section-labels
+@import components/read-more
 
 // To be revamped
 @import components/multi-select
