--- a/app/views/styleguide/08_Combos/_11_home-claim.html.haml
+++ b/app/views/styleguide/08_Combos/_11_home-claim.html.haml
@@ -26,7 +26,7 @@
 
 - internal_login = combo('form', props: { action: 'db/login', method:'post'}) do
   = combo('form-group', mods: 'rowed.compact') do
-    %input.block.large{:autofocus => "false", :name => "login", :placeholder => "Benutzername", :type => "text"}/
+    %input.block.large{:autofocus => "false", :name => "login", :placeholder => "E-Mail", :type => "text"}/
   = combo('form-group', mods: 'rowed.compact') do
     %input.block.large{:name => "password", :placeholder => "Passwort", :type => "password"}/
   = combo('form-group', mods: 'rowed.compact') do
