fix: missing audio icon in featured entries

--- a/app/assets/stylesheets/combos/_ui-featured-entries.sass
+++ b/app/assets/stylesheets/combos/_ui-featured-entries.sass
@@ -101,6 +101,16 @@
   z-index: 100
   color: $mono-mid
 
+.ui-featured-entries-item
+  .ui_media-type-icon
+    color: $mono-mid
+    font-size: 52px
+    position: absolute
+    width: 100%
+    top: 33%
+    left: 0px
+    text-align: center
+
 /**
  *  SMALL variation
  *-----------------------------------------
