fix: mark deleted resources in admin mode (part 2)

--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -1,1 +1,8 @@
+:ruby
+  if @collection.try(:deleted_at).try(:present?)
+    content_for(:app_alerts) do
+      component('alert', level: 'error', text: t(:collection_deleted))
+    end
+  end
+
 = render 'show_base'
