--- a/app/assets/stylesheets/views/notifications.sass
+++ b/app/assets/stylesheets/views/notifications.sass
@@ -4,28 +4,57 @@
   to
     opacity: 0
 
+.notifications
+  b
+    font-weight: bold // dafuk
+
+.notifications-count
+  font-weight: normal
+
 .notifications-save-confirmation
   animation: fadeOut 1s 1s forwards
 
-.notifications-date-title
-  display: inline-block
+.notification-date-title
+  display: flex
+  gap: 4px
   margin-bottom: 4px
-  position: relative
-  padding-left: 20px
   font-weight: bold
-  cursor: pointer
   color: $mono-dark
   &:hover
     color: $black
 
-.notifications-date-title__icon
+.notification-date-title__expand-button
   @extend .icon-extend
-  +position-top-left(5px, 3px)
+  cursor: pointer
+  margin-top: 4px
   font-size: 12px
   color: $mono-mid
   &:before
     content: "\e605"
 
-.notifications-date-title__icon--open
+.notification-date-title__expand-button--expanded
   &:before
     content: "\e603"
+
+.notification-row
+  display: flex
+  gap: 4px
+  margin-left: 40px
+  margin-bottom: 4px
+
+  &--with-inline-date
+    margin-left: 16px
+
+  &__datetime-cell
+    white-space: nowrap
+
+.notifications-mini-delete-button
+  margin-top: -4px
+
+.notification-date-title
+  .notifications-mini-delete-button
+    visibility: hidden
+
+.notification-date-title--expanded
+  .notifications-mini-delete-button
+    visibility: visible
